
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#7011] Prevent infinite recursion error in modElement::isStaticSourceMutable
- [#7333] Prevent error when id is undefined in resource edit controller
- [#7364] Add setting to set default sort field of MODx.Browser view
- [#7363] Check for this.stateful in MODx.tree.Tree::_saveState
- Add missing index to modSession.access
- [#7357] Prevent viewing of Profile if user does not have change_profile permission
- [#7322] Fix issue where certain regions were not able to be hid via FC; clarified FC set labels
- [#7362] Fix issue with conflicting FC Sets when User belongs to more than one User Group with a Set
- Update to xPDO 2.2.3-pl
- Prevent fatal error if invalid class_key is passed to Resource edit/create page
- [#7052] Prevent username/host/dbname from being set as a system setting placeholder
- [#3860] Fix session issue with modUser joinGroup/leaveGroup methods
- [#7315] Standardize default sorting for User Group access grids
- Fixed ellipsis filter to not cut off html tags in property
- [#7326] Fix inability to unset a TV's Input Option Values field
- [#7306] Sanity check for reload data for resource groups when changing template of new resource
- [#7279] Handle edge case where processor classes might already be loaded with CRCs causing issues with runProcessor
- Add dashboard name to dashboard title
- [#3818] Add UI/processing to set response code for weblinks
- [#7061] Prevent Static Element access to the core/config/ directory
- [#7088] Tweak column widths for settings grids
- [#7102] Improve memory_limit checks to properly check for values that are not formatted to PHP standards
- [#7191] Fix invalid api doc link in link_tag_scheme description
- [#7194] Fix issue where save button did not enable when reordering groups on user edit screen